2024-02-21T08:18:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7985967261 # 136
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-21
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 620 1065 / 624 1071
* notice: next accum: outdated-unq outdated-all / unq all: 621 1066 / 625 1072
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-02-07] / [2024-02-21]

2024-02-21T01:02:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7982344126 # 135
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-21
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 619 1063 / 624 1071
* notice: next accum: outdated-unq outdated-all / unq all: 620 1065 / 624 1071
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-06] / []

2024-02-20T16:17:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7976606665 # 134
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-20
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 619 1063 / 623 1070
* notice: next accum: outdated-unq outdated-all / unq all: 619 1063 / 624 1071
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-06 2024-02-20]

2024-02-20T01:00:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7966951771 # 132