@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-21T08:18:47Z",
+  "timestamp" : "2024-02-21T16:17:50Z",
   "count_outdated" : 1066,
   "uniques_outdated" : 621,
-  "count" : 1072,
+  "count" : 1073,
   "uniques" : 625,
   "clones" : [
     {
@@ -34,9 +34,9 @@
     },
     {
       "timestamp": "2024-02-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
